cmake_minimum_required(VERSION 3.16.1)

set(PROJECT_NAME electron-profiler)
project(${PROJECT_NAME})

file(GLOB_RECURSE SOURCE_FILES *.h *.cpp *.cc)
add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES})

target_compile_definitions(${PROJECT_NAME} PUBLIC V8_31BIT_SMIS_ON_64BIT_ARCH V8_COMPRESS_POINTERS V8_REVERSE_JSARGS)

target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/node_modules/nan/)
target_link_libraries(${PROJECT_NAME} ${CMAKE_JS_LIB} ${DETOURS_LIB})

target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_JS_INC})
target_include_directories(${PROJECT_NAME} PRIVATE ${NODE_ADDON_API_DIR})

target_link_options(${PROJECT_NAME} PRIVATE "/delayload:node.exe")
set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "" SUFFIX ".node")
target_link_libraries(${PROJECT_NAME} delayimp.lib)

set(TARGET_OUTPUT_DIR ${CMAKE_SOURCE_DIR}/lib)

set_target_properties(${PROJECT_NAME} PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY_DEBUG ${TARGET_OUTPUT_DIR}
    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${TARGET_OUTPUT_DIR}
    RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${TARGET_OUTPUT_DIR}
    PDB_OUTPUT_DIRECTORY_DEBUG ${TARGET_OUTPUT_DIR}
    PDB_OUTPUT_DIRECTORY_RELEASE ${TARGET_OUTPUT_DIR}
    PDB_OUTPUT_DIRECTORY_RELWITHDEBINFO ${TARGET_OUTPUT_DIR}
)